src/index.css
/* ... */
h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.primary-button {
  padding: 8px 20px;
  font-size: 20px;
  font-weight: 400;

  background-color: #0f172a;
  color: white;

  border: none;
  border-radius: 999px;

  cursor: pointer;
  transition: all 0.2s ease;

  box-shadow: 0 0px 20px rgb(0, 0, 0,.5);
}

.primary-button:hover {
  background-color: #333;
  transform: translateY(-2px);
}

.icon-button {
  height: 50px;
  aspect-ratio: 1 / 1;
  background-color: whitesmoke;
  border: none;
  border-radius: 999px;

  cursor: pointer;
  transition: all 0.2s ease;

  box-shadow: 0 2px 15px rgb(0, 0, 0, .5);

  display: flex;
  justify-content: center;
  align-items: center;
  
}

.icon-button:hover {
  background-color: white;
  transform: translateY(-2px);
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

html {
  scroll-behavior: smooth;
}

.fullscreen-section {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  text-align: center;  
  flex-direction: column;
  padding-top: 60px;
  transform: scale(0.98);
  transition: transform 0.6s ease;
  margin-bottom: 50px;
  padding-left: 16px;
  padding-right: 16px;
}

.fullscreen-section:hover{
  transform: scale(1);
}

.headshot {
  width: 100px;
  height: 100px;
  object-fit: cover;
  border-radius: 50%;
  outline-width: 4px;
  outline-style: solid;
  outline-color: #1a1a1a80;
  box-shadow: 0 8px 30px rgb(0, 0, 0);

  margin-bottom: 20px;
}

.home-row{
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 24px;

  max-width: 800px;
  width: 100%;
  padding: 0 24px;

  margin-top: 50px;
  flex-wrap: wrap;
}

.home-text{
  margin: 0;
  margin-top: 24px;

  max-width: 800px;
  font-size: 22px;
  font-weight: 500;
}

.about-row{
  display: flex;
  align-items: center; 
  justify-content: center;
  gap: 24px;

  max-width: 1500px;
  width: 100%;
  padding: 0 24px;
  flex-wrap: wrap;
}

.about-text{
  max-width: 1000px;
  font-size: 20px;
  line-height: 1.5;
  font-weight: 400;
  text-align: left;
}

.about-graphic{
  width: 400px;
  height: 400px;
  max-width: 90vw;
  max-height: 90vw;
}

.project-element{
  width: min(900px, 92vw);
  height: auto;

  background: linear-gradient(
    to right,
    rgb(235, 235, 235, .2) 0%,
    rgba(197, 255, 200, 0.2) 100%
  );

  border: none;
  border-radius: 20px;

  box-shadow: 0 2px 15px rgb(0, 0, 0, .5);

  margin-top: 40px;
  margin-bottom: 80px;

  display: flex;
  justify-content: center;
  align-items: flex-start;

  transform: scale(.99);
  transition: all 0.2s ease;

  overflow: hidden;
}

.project-element:hover{
  transform: scale(1);
  background: linear-gradient(
    to right,
    rgba(191, 191, 191, 0.2) 0%,
    rgba(155, 200, 157, 0.2) 100%
  );  
}

.project-image {
  width: min(300px, 86vw);
  height: auto;
  aspect-ratio: 3 / 2;
  object-fit: cover;

  box-shadow: 0 2px 15px rgb(0, 0, 0, .3);
  border: none;
  border-radius: 40px;

  transition: transform 0.3s ease;
  transform: rotate(1deg) translateY(-10%);
}

.project-element:hover .project-image {
  transform: scale(1.08) rotate(2deg) translateY(-10%);
}

.project-info{
  flex: 1 1 420px;
  min-width: 0;
}


.project-skill {
  background: rgba(20, 20, 60, 0.5);
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  border: 1px solid rgba(255,255,255,0.08);
  box-shadow: 0 8px 30px rgba(0,0,0,0.25);
  color: white;
  border-radius: 9999px;
  font-size: 14px;

  display: inline-block;
  padding: 5px 12px;
  margin: 6px 8px 6px 0;
}

.project-row{
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 24px;
  flex-wrap: wrap;
}

@media (max-width: 900px){
  .project-row{
    flex-direction: column;
    align-items: center;
  }

  .project-image{
    width: min(420px, 92vw);
    flex: 0 0 auto;
  }

  .project-info{
    width: 92vw;
    flex: 0 0 auto;
    padding-left: 0;
  }

  .project-element:nth-child(even) .project-row{
    flex-direction: column;
  }
}

.project-element:nth-child(even) .project-row {
  flex-direction: row-reverse;
}

.project-element:nth-child(even){
  transform: translateX(50px);
}

.project-element:nth-child(odd){
  transform: translateX(-50px);
}

.skill {
  height: fit-content;
  width: fit-content;

  background: rgba(20, 20, 60, 0.5);
  border: 1px solid rgba(255,255,255,0.08);
  box-shadow: 0 8px 30px rgba(0,0,0,0.25);

  color: white;
  font-size: 26px;
  font-weight: 500;

  border-radius: 20px;

  padding: 8px 15px;
  transition: transform 0.2s ease;
}

.skill:hover {
    transform: translateY(-4px);
    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
}

.timeline {
  position: relative;
  margin-top: 60px;
}

.timeline::before {
  content: "";
  position: absolute;
  left: -14px;
  top: 0;
  bottom: 0;
  width: 6px;
  background: linear-gradient(
    to bottom,
    #7054ee66 0%,
    #7054ee00 100%
  );
  box-shadow: 0 8px 10px rgba(0, 0, 0, 0.245);
}

.timeline-item {
  position: relative;
  padding-left: 100px;
  margin-bottom: 100px;
}

.timeline-marker {
  position: absolute;
  left: -50px;
  top: 8px;
  width: 80px;
  height: 80px;
  border-radius: 50%;

  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: white;

  object-fit: cover;
  outline-width: 8px;
  outline-style: solid;
  outline-color: #7054ee;
  box-shadow: 0 6px 20px rgb(0, 0, 0, .25);
}

.timeline-content p { margin: 0; }
/* ... */

